--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 -->
 <html>
   <head>
-    <title>Street View Containers</title>
+    <title>PrettyGood OOH Street View</title>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="icon" href="./favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="./favicon-16x16.png" sizes="16x16" type="image/png">
     <script type="module" src="./index.ts"></script>
   </head>
   <body>
